# projet-pdp

./: LICENSE  readme.md  todo.md
tcurves/: .gitignore  Cargo.toml  readme.md
tcurves/data/: beurre_ail.json  chocolate.json  error_not_square.json  inria.json  multiple_datasets.json  three_curves.json
tcurves/src/: main.rs
timecurves-py/: Cargo.toml  Readme.md  pyproject.toml
timecurves-py/examples/: cli.py  custom_projection.py  custom_random_projection.py  projection.py  set_with_custom_projection.py  sklearn_mds_projection.py  svg_export.py  umap_projection.py
timecurves-py/src/: cli.py  export.rs  input.rs  lib.rs  projection.rs  py_projection.rs  test.py  timecurve.rs
timecurves-rs/: .gitignore  Cargo.toml  readme.md
timecurves-rs/data/: chateau-gontier.json  gorron.json  levare.json
timecurves-rs/src/: error.rs  input.rs  lib.rs  main.rs  math.rs  projection.rs  timecurve.rs
timecurves-rs/src/exporter/: csv.rs  exporter.rs  mod.rs  text_builder.rs
timecurves-rs/src/exporters/: csv_exporter.rs  exporter.rs  mod.rs  svg_exporter.rs  tikz_exporter.rs  vega_lite_exporter.rs
timecurves-rs/tests/: error.json  psfr100points.json  template.json
videomatrixgen/: .gitignore  Cargo.toml  README.md
videomatrixgen/src/: lib.rs  main.rs
wikimatrixgen/: Cargo.toml  readme.md
wikimatrixgen/src/: lib.rs  main.rs
