[package]
name = "tcurves"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
timecurves_rs = {path = "../timecurves-rs"}
clap = { version = "4.4.18", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
