[package]
name = "wikimatrixgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
edit-distance = "2.1.0"
reqwest = {version = "0.11.24", features = ["blocking"]}
serde = { version = "1.0.197", features = ["derive"] }
serde_json = {version = "1.0.114", features = ["preserve_order"]}
